maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value RAND
var random3:Int = RAND(1) + RAND(1) + RAND(1)
                  ^