maze.lessons.maze.island.IslandMaze.scala.code
override def run() {    while(!estSurBiscuit()){

var random3:Int = RAND(1) + RAND(1) + RAND(1)
    
    if (random3 == 0) {droite()}
    if (random3 ==1 && !estFaceMur()) {avance()}
    if (random3 == 2) {gauche()} 
}
prendBiscuit();
}
